<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLogging"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".fragments.fragment_logging">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/edtxt_log_name"
        android:layout_width="376dp"
        android:layout_height="52dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@android:drawable/progress_horizontal"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:backgroundTintMode="screen"

        android:hint="@string/logging_hint_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_log_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/edtxt_log_phone"
        android:layout_width="376dp"
        android:layout_height="52dp"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@android:drawable/progress_horizontal"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:backgroundTintMode="screen"
        android:hint="@string/logging_hint_phone"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toTopOf="@+id/edtxt_log_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_log_name" />

    <EditText
        android:id="@+id/edtxt_log_pass"

        android:layout_width="376dp"
        android:layout_height="52dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@android:drawable/progress_horizontal"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:backgroundTintMode="screen"

        android:hint='"Ingrese Password"'
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_log_name" />


    <TextView
        android:id="@+id/txt_log_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logging_msg_validation"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_log_pass" />

    <Button
        android:id="@+id/but_log_accept"
        android:layout_width="122dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/boton_redondo"
        android:text="ACEPTAR"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/but_log_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/but_log_cancel"
        android:layout_width="122dp"
        android:layout_height="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/boton_redondo"
        android:text="CANCELAR"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/but_log_accept"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="61dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/ic_lock_idle_lock"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_log_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>